Salt basic revisions

--- a/docs/receiving/using-app-portal/adding-endpoints.mdx
+++ b/docs/receiving/using-app-portal/adding-endpoints.mdx
@@ -7,7 +7,12 @@ In order to start listening to messages sent through Svix, you will need to conf
 Adding an endpoint is as simple as providing a URL that you control and a list of **event types** that you want to
 listen to.
 
-![add endpoint](/img/app-portal/add-endpoint.png)
+<img
+  src="/img/app-portal/add-endpoint.png"
+  alt="add-endpoint"
+  width="50%"
+  height="auto"
+></img>
 
 :::tip Svix Play
 
