--- a/docs/receiving/using-app-portal/filtering-logs.mdx
+++ b/docs/receiving/using-app-portal/filtering-logs.mdx
@@ -2,7 +2,12 @@
 title: Filtering Logs
 ---
 
-![unfiltered message logs](/img/app-portal/log-list.png)
+<img
+  src="/img/app-portal/log-list.png"
+  alt="log-list"
+  width="50%"
+  height="auto"
+></img>
 
 If you need to track down a particular message that was sent to one of your
 endpoints, there are a few ways to help you find it.
@@ -12,7 +17,12 @@ list of all messages sent it it. You can filter this list by
 **event type**. If you know roughly when the message was sent, you can further
 narrow down the list using the **date filter**.
 
-![date filter](/img/app-portal/date-filter.png)
+<img
+  src="/img/app-portal/date-filter.png"
+  alt="date-filter"
+  width="50%"
+  height="auto"
+></img>
 
 You can choose to filter from one of the presets:
 
