--- a/docs/receiving/using-app-portal/replaying-messages.mdx
+++ b/docs/receiving/using-app-portal/replaying-messages.mdx
@@ -10,7 +10,12 @@ title: Replaying Messages
 If you want to replay a single event, you can find the message
 from the UI and click the options menu next to any of the attempts.
 
-![resend message](/img/app-portal/resend-single.png)
+<img
+  src="/img/app-portal/resend-single.png"
+  alt="resend-single"
+  width="50%"
+  height="auto"
+></img>
 
 From there, click "resend" to have the same message send to your
 endpoint again.
@@ -19,7 +24,12 @@ If you need to recover from a service outage and want to replay all
 the events since a given time, you can do so from the Endpoint page.
 On an endpoint's details page, click `Options > Recover Failed Messages`.
 
-![recover modal](/img/app-portal/replay-modal.png)
+<img
+  src="/img/app-portal/replay-modal.png"
+  alt="replay-modal"
+  width="50%"
+  height="auto"
+></img>
 
 From there, you can choose a time window to recover from.
 
