--- a/docs/receiving/using-app-portal/testing-events.mdx
+++ b/docs/receiving/using-app-portal/testing-events.mdx
@@ -8,7 +8,12 @@ is to start receiving events as quickly as possible.
 That's why we we have a "Testing" tab for you to send example events
 to your endpoint.
 
-![testing endpoint](/img/app-portal/testing-endpoint.png)
+<img
+  src="/img/app-portal/testing-endpoint.png"
+  alt="testing-endpoint"
+  width="50%"
+  height="auto"
+></img>
 
 After sending an example event, you can click into the message to view
 the message payload, all of the message attempts, and whether it
