--- a/docs/receiving/introduction.mdx
+++ b/docs/receiving/introduction.mdx
@@ -1,8 +1,11 @@
 ---
 title: Introduction
+slug: /
 ---
 
-Read to following sections to learn why and how to verify webhooks sent by the Svix service and its customers.
+SALT has partnered with Svix to provide robust and reliable webhooks. Svix is a tried and tested service provider to webhooks that just work. Making it easy for you to setup webhook endpoints and receive your SALT data where you need it.
+
+This documentation will help you learn more about webhooks, how to use the Svix portal, as well as more advanced patterns like veryifying the webhooks have truly come for SALT and Svix.
 
 :::tip
 You can use the [Svix Play webhook debugger](https://www.svix.com/play/) and the [Svix CLI](https://github.com/svix/svix-cli) to inspect, test and debug your webhooks during development.
@@ -10,8 +13,12 @@ You can use the [Svix Play webhook debugger](https://www.svix.com/play/) and the
 
 ## Webhooks Consumption 101
 
-Webhooks are how services notify each other of events. At their core they are just a `POST` request to a pre-determined endpoint. The endpoint can be whatever you want, and you can just [add them from the UI](/receiving/using-app-portal/adding-endpoints). You normally use one endpoint per service, and that endpoint listens to all of the event types. For example, if you receive webhooks from Acme Inc., you can structure your URL like: `https://www.example.com/acme/webhooks/`.
+Webhooks are how services like SALT notify other services and app of events that happened at SALT. For example, Notify Zapier every time SALT receives a submission. At their core a webhook set of data, that is sent in a `POST` request to a pre-determined endpoint. The endpoint can be whatever you want, and you can add or edit endpoints under your [SALT integrations](https://insuranceform.app/integrations/webhooks) anytime. It's typical to use one endpoint per service, and that endpoint listens to all of the event types.
 
-The way to indicate that a webhook has been processed is by returning a `2xx` (status code `200-299`) response to the webhook message within a reasonable time-frame (15s with Svix). It's also important to disable `CSRF` protection for this endpoint if the framework you use enables them by default.
+Once you've setup an enpoint you'll begin to receive data for the events you subscribed to, your server can process the data and then return a `2xx` (status code `200-299`) within a reasonable time-frame (15s with Svix) to indicate the webhook has been received.
 
-Another important aspect of handling webhooks is to verify the signature and timestamp when processing them. You can learn more about it in the [why verify section](/receiving/verifying-payloads/why).
+A couple quick tips:
+
+- You may need to disable `CSRF` protection for this endpoint if your receiving framework enables them by default.
+
+- Verify the signature and timestamp of the webhook as you process them is crucial for security. You can learn more verification in the [why verify section](/receiving/verifying-payloads/why).
