--- a/docs/receiving/using-app-portal/event-catalog.mdx
+++ b/docs/receiving/using-app-portal/event-catalog.mdx
@@ -4,7 +4,12 @@ title: Event Catalog
 
 The Event Catalog shows all the **event types** available to subscribe to.
 
-![event catalog](/img/app-portal/event-catalog.png)
+<img
+  src="/img/app-portal/event-catalog.png"
+  alt="event-catalog"
+  width="50%"
+  height="auto"
+></img>
 
 From here, you can view the **event definition**–the shape of the event payload
 as well as what values you can expect to receive.
